<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home_item"/>

    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/nav_favourites_item"/>

    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/nav_favourites_on_map_item"/>

    <item
        android:id="@+id/nav_close_app"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="Exit"/>

</menu>