<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.fragments.MissingPermissionsFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_missing_permissions_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/primusregular"
            android:gravity="center"
            android:text="@string/missing_permissions_heading"
            android:textAllCaps="true"
            android:textColor="@color/yellow_900"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/lineDividerBase"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="@color/yellow_900"
            app:layout_constraintBottom_toTopOf="@+id/tv_missing_permissions_internet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_missing_permissions_heading" />

        <TextView
            android:id="@+id/tv_missing_permissions_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/primusregular"
            android:text="@string/missing_permissions_internet"
            android:textColor="@color/black100"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lineDividerBase"
            app:layout_constraintVertical_bias="0.24" />

        <TextView
            android:id="@+id/tv_missing_permissions_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/primusregular"
            android:text="@string/missing_permissions_location"
            android:textColor="@color/black100"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_missing_permissions_internet"
            app:layout_constraintVertical_bias="0.0" />


        <LinearLayout
            android:id="@+id/btnGrantPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:background="@drawable/base_button_blue"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_missing_permissions_location"
            app:layout_constraintVertical_bias="0.24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/primusregular"
                android:gravity="center_horizontal"
                android:text="@string/grant_permissions"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/weather_icon_description"
                android:src="@drawable/ic_baseline_beenhere_24"
                app:tint="@color/white" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/tv_messaging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/primusregular"
        android:text="@string/permission_granted_yes"
        android:textColor="@color/green_900"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>