<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/singleWeatherInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutSingleViewCityTemperature"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/custom_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvSingleViewCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/primusregular"
                android:gravity="start"
                android:hint="@string/hint_city_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSingleViewTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="2"
                android:fontFamily="@font/primusregular"
                android:gravity="center_horizontal"
                android:text="@string/default_temperature"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSingleViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_week_day"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/layoutSingleViewCityTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSingleViewDate"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/btnSingleViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#0078C8"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="@font/primusregular"
                    android:gravity="center_horizontal"
                    android:text="@string/view_details"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:tint="@color/white"
                    android:src="@drawable/ic_baseline_preview_24"
                    android:contentDescription="@string/weather_icon_description"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSingleViewGoogleMaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@color/yellow_900"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="@font/primusregular"
                    android:gravity="center_horizontal"
                    android:text="@string/open_maps"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:tint="@color/white"
                    android:src="@drawable/ic_baseline_map_24"
                    android:contentDescription="@string/weather_icon_description"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>